=== HEAD

* Add Database#do on PostgreSQL for using the DO anonymous code block execution statement (jeremyevans)

* Remove Model.dataset_methods (jeremyevans)

* Allow subset to be called inside a dataset_module block (jeremyevans)

* Make Dataset#avg, #interval, #min, #max, #range, and #sum accept virtual row blocks (jeremyevans)

* Make Dataset#count use a subselect when the dataset has an offset without a limit (jeremyevans) (#587)

* Dump deferrable status of unique indexes on PostgreSQL (radford) (#583)

* Support :deferrable constraints on PostgreSQL (radford) (#583)

* Support Database#copy_table and #copy_into on jdbc/postgres (bdon) (#580)

* Make Dataset#update not use a limit (TOP) on Microsoft SQL Server 2000 (jeremyevans) (#578)

=== 3.41.0 (2012-11-01)

* Add bin/sequel usage guide (jeremyevans)

* Make Dataset#reverse and #reverse_order accept virtual row blocks (jeremyevans)

* Add Sequel.delay for generic delayed evaluation (jeremyevans)

* Make uniqueness validations correctly handle nil values (jeremyevans)

* Support :unlogged option for create_table on PostgreSQL (JonathanTron) (#575)

* Add ConnectionPool#pool_type to get the type of connection pool in use (jeremyevans)

* Explicitly mark primary keys as NOT NULL on SQLite (jeremyevans)

* Add support for renaming primary key columns on MySQL (jeremyevans)

* Add connection_validator extension for automatically checking connections and transparently handling disconnects (jeremyevans)

* Add Database#valid_connection? for checking whether a given connection is valid (jeremyevans)

* Make dataset.limit(nil, nil) reset offset as well as limit (jeremyevans) (#571)

* Support IMMEDIATE/EXCLUSIVE/DEFERRED transaction modes on SQLite (Eric Wong)

* Major change in the Database <-> ConnectionPool interface (jeremyevans)

* Make touch plugin handle touching of many_*_many associations (jeremyevans)

* Make single_table_inheritance plugin handle non-bijective mappings (hannesg) (#567)
